--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <div class="mass">
 <h1 id="home">James Pohl</h1>
-<img src="https://github.com/TadPohl/WebDevProject1/blob/main/SelfPhoto.JPG" alt="A Photo of Myself" style="width:500px; height:500px">
+<img src="SelfPhoto.jpg" alt="A Photo of Myself" width=500px; height=500px>
 <h2>Personal Info:</h2>
 <ul>
     <li><b>Major:</b> Computer Science</li>
