--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <div class="mass">
 <h1 id="home">James Pohl</h1>
-<img src="SelfPhoto.jpg" alt="A Photo of Myself" width=500px; height=500px>
+<img src="https://raw.githubusercontent.com/TadPohl/WebDevProject1/main/SelfPhoto.JPG">
 <h2>Personal Info:</h2>
 <ul>
     <li><b>Major:</b> Computer Science</li>
