--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         position: fixed;
         top: 0;
         overflow: hidden;
-        background-color: #444;
+        background-color: #333;
         width: 100%;
     }
     table, th, td {
@@ -45,7 +45,7 @@
 
 <div class="mass">
 <h1 id="home">James Pohl</h1>
-<img src="./main/SelfPhoto.JPG">
+<img src="https://raw.githubusercontent.com/TadPohl/WebDevProject1/main/SelfPhoto.JPG" alt="A picture of James Pohl">
 <h2>Personal Info:</h2>
 <ul>
     <li><b>Major:</b> Computer Science</li>
