--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 <style>
     .foot{
         position: fixed;
-        text-align: center;
+        bottom: 0;
         width: 100%;
+        background-color: #333;
     }
     .nav{
         position: fixed;
