--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         bottom: 0;
         width: 100%;
         background-color: #333;
+        text-align: center;
     }
     .nav{
         position: fixed;
